[package]
name = "detours-sys"
version = "0.1.2"
authors = ["Diana <5275194+DianaNites@users.noreply.github.com>", "rkr35 <40642728+rkr35@users.noreply.github.com>"]
edition = "2018"
links = "detours"
# Package stuff
description = "Rust bindings to Microsoft Detours"
documentation = "https://github.com/microsoft/Detours/wiki/Reference"
homepage = "https://github.com/rkr35/detours"
repository = "https://github.com/rkr35/detours"
readme = "README.md"
keywords = [
    "detours",
    "hooking",
    "injection",
]
categories = [
    "external-ffi-bindings",
    "os::windows-apis",
]
license = "MIT OR Apache-2.0"
exclude = [
    "/.vscode/**"
]

[badges]
maintenance = { status = "as-is" }

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0" } 
